tests/integration/pilot/test_artifacts/pilot-b69b4fcf9fb24a978e2d0f26c/TestTraffic/use-client-protocol/use_client_protocol_with_h2/_test_context/DestinationRule.1317751054.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: use-client-protocol
  namespace: echo-2-20468
spec:
  host: c
  trafficPolicy:
    connectionPool:
      http:
        useClientProtocol: true
    tls:
      mode: DISABLE
